--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,19 @@
         <div class="container">
           <p>Project</p>
           <select name="select-projects" id="select-projects">
-            <option value="all">All</option>
-            <option value="0" selected>Default</option>
-            <option value="1">School</option>
+            <option value="All">All</option>
           </select>
+          <button class="add-project">
+            <span class="iconify" data-icon="material-symbols:add"></span>
+          </button>
+          <button class="delete delete-project">
+            <span class="iconify" data-icon="material-symbols:delete"></span>
+          </button>
         </div>
       </header>
 
-      <div id="tasks-container"></div>
+      <div id="not-complete" class="tasks-container"></div>
+      <div id="complete" class="tasks-container"></div>
     </section>
 
     <section class="modal edit-task hidden">
@@ -70,6 +75,42 @@
         </select>
       </div>
 
+      <div class="input-error hidden"></div>
+      <input type="submit" value="Create" />
+    </section>
+
+    <section class="modal info-task hidden">
+      <div class="flex">
+        <p>Task</p>
+        <button class="btn-close">
+          <span class="iconify" data-icon="material-symbols:close"></span>
+        </button>
+      </div>
+      <div class="container">
+        <label>Title</label>
+        <p class="info-task-title"></p>
+        <label>Description</label>
+        <p class="info-task-description"></p>
+        <label>Due date</label>
+        <p class="info-task-duedate"></p>
+        <label>Priority</label>
+        <p class="info-task-priority"></p>
+        <label>Project</label>
+        <p class="info-task-project"></p>
+      </div>
+    </section>
+
+    <section class="modal add-project hidden">
+      <div class="flex">
+        <p>Project</p>
+        <button class="btn-close">
+          <span class="iconify" data-icon="material-symbols:close"></span>
+        </button>
+      </div>
+      <div class="container">
+        <label for="project-title">Title</label>
+        <input id="project-title" />
+      </div>
       <div class="input-error hidden"></div>
       <input type="submit" value="Create" />
     </section>
