add option for deleting a project. fix 'All projects page' deleting bug

--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,6 @@
     </section>
 
     <div class="overlay hidden"></div>
-    <button class="btn btn-open btn-add-task">+</button>
+    <button class="btn btn-open btn-add-task hidden">+</button>
   </body>
 </html>
