tasks are now kept in local storage

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="container">
         <label for="title">Title</label>
-        <input id="title" type="text" />
+        <input id="title" type="text" required/>
         <label for="description">Description</label>
         <input id="description" type="text" />
         <label for="due-date">Due date</label>
