--- a/index.html
+++ b/index.html
@@ -34,23 +34,21 @@
           <span class="iconify" data-icon="material-symbols:close"></span>
         </button>
       </div>
-      <div class="container">
+      <form class="container">
         <label for="title">Title</label>
-        <input id="title" type="text" />
+        <input id="title" type="text" required />
         <label for="description">Description</label>
-        <input id="description" type="text" />
+        <input id="description" type="text" required />
         <label for="due-date">Due date</label>
-        <input id="due-date" type="date" />
+        <input id="due-date" type="date" required />
         <label for="priority">Priority</label>
-        <select name="priority" id="priority">
+        <select name="priority" id="priority" required>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
         </select>
-      </div>
-
-      <div class="input-error hidden"></div>
-      <input type="submit" value="Done" />
+        <input type="submit" value="Done" />
+      </form>
     </section>
 
     <section class="modal add-task hidden">
@@ -60,23 +58,21 @@
           <span class="iconify" data-icon="material-symbols:close"></span>
         </button>
       </div>
-      <div class="container">
+      <form class="container">
         <label for="title">Title</label>
-        <input id="title" type="text" required/>
+        <input required id="title" type="text" />
         <label for="description">Description</label>
-        <input id="description" type="text" />
+        <input required id="description" type="text" />
         <label for="due-date">Due date</label>
-        <input id="due-date" type="date" />
+        <input required id="due-date" type="date" />
         <label for="priority">Priority</label>
-        <select name="priority" id="priority">
+        <select required name="priority" id="priority">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
         </select>
-      </div>
-
-      <div class="input-error hidden"></div>
-      <input type="submit" value="Create" />
+        <input type="submit" value="Create" />
+      </form>
     </section>
 
     <section class="modal info-task hidden">
@@ -107,12 +103,11 @@
           <span class="iconify" data-icon="material-symbols:close"></span>
         </button>
       </div>
-      <div class="container">
+      <form class="container">
         <label for="project-title">Title</label>
-        <input id="project-title" />
-      </div>
-      <div class="input-error hidden"></div>
-      <input type="submit" value="Create" />
+        <input id="project-title" required />
+        <input type="submit" value="Create" />
+      </form>
     </section>
 
     <div class="overlay hidden"></div>
